--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
-      <h1 class="project-name"><a href="{{ site.url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+      <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
       {% if site.github.is_project_page %}
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
@@ -28,7 +28,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2>{{ page.title }}</h2>
+      <h2><a href="{{ site.url }}">Posts</a> | {{ page.title }}</h2>
       {{ content }}<br />
 
       <footer class="site-footer">
