some more fixes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2><a href="{{ site.url }}">Posts</a> | {{ page.title }}</h2>
+      <h2><a href="{{ site.url }}">Posts</a>/{{ page.title }}</h2>
       {{ content }}<br />
 
       <footer class="site-footer">
