--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,10 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2><a href="{{ site.url }}">Posts</a>/{{ page.title }}</h2>
-      {{ content }}<br />
-
+      <h2><a href="{{ site.url }}">Posts</a> {% if page.title %}|{% endif %}{{ page.title }}</h2>
+      <br />{{ page.date }}
+      <br />{{ content }}
+      <br />
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
