--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,9 +28,9 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2><a href="{{ site.url }}">Posts</a> {% if page.title %}|{% endif %}{{ page.title }}</h2>
-      <br />{{ page.date }}
-      <br />{{ content }}
+      <h2><a href="{{ site.url }}">Posts</a>{% if page.title %} | {% endif %}{{ page.title }}</h2>
+      <span>{{ page.date }}</span>
+      {{ content }}
       <br />
       <footer class="site-footer">
         {% if site.github.is_project_page %}
