--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
     <main id="content" class="main-content" role="main">
       <h2><a href="{{ site.url }}">Posts</a>{% if page.title %} | {% endif %}{{ page.title }}</h2>
-      <span>{{ page.date | date: "%-d %B %Y" }}</span>
+      <span><strong>{{ page.date | date: "%-d %B %Y" }}</strong></span>
       
       {{ content }}
       
