--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,10 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2><a href="{{ site.url }}">Home</a>{% if page.title %} / {% endif %}{{ page.title }}</h2>
+      {% if page.title %}
+      <h2><a href="{{ site.url }}">Home</a> / {{ page.title }}</h2>
       <span><strong>{{ page.date | date: "%-d %B %Y" }}</strong>{% if page.comments %} | <a href="{{ page.url }}#disqus_thread">Leave a Comment</a>{% endif %}</span>
+      {% endif %}
       
       {{ content }}
       {% if page.comments %}
