--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -28,14 +28,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
-      <h2>Posts in Tech</h2>
-        <ul>
-          {% for post in site.categories.tech %}
-            {% if post.url %}
-                <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul> 
+      {{ content }} 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
           <span class="site-footer-owner"><a href="{{ site.github.repository_url }}">{{ site.github.repository_name }}</a> is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a>.</span>
