--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -28,6 +28,8 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      <h2><a href="{{ site.url }}">Home</a> / {{ page.title }}</h2>
+      
       {{ content }} 
       <footer class="site-footer">
         {% if site.github.is_project_page %}
