--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -28,7 +28,9 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      {% if page.title %}
       <h2><a href="{{ site.url }}">Home</a> / {{ page.title }}</h2>
+      {% endif %}
       
       {{ content }} 
       <footer class="site-footer">
