--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     <main id="content" class="main-content" role="main">
       {% if page.title %}
       <h2><a href="{{ site.url }}">Home</a> / {{ page.title }}</h2>
-      <span><strong>{{ page.date | date: "%-d %B %Y" }}</strong>{% if page.categories %} in {% for cat in page.categories %}{{ page.categories | first | capitalize }}{% endfor %}{% endif %}{% if page.comments %} | <a href="{{ page.url }}#disqus_thread">Leave a Comment</a>{% endif %}</span>
+      <span><strong>{{ page.date | date: "%-d %B %Y" }}</strong>{% if page.categories %} in {% for cat in page.categories %}{{ cat.title | capitalize }} {% endfor %}{% endif %}{% if page.comments %} | <a href="{{ page.url }}#disqus_thread">Leave a Comment</a>{% endif %}</span>
       {% endif %}
       
       {{ content }}
